--- a/mlm-web/package.json
+++ b/mlm-web/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@nuxt/content": "^1.9.0",
     "@nuxtjs/apollo": "^4.0.1-rc.5",
+    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/cloudinary": "^1.0.3-beta-3",
     "@nuxtjs/pwa": "^3.0.2",
     "@svgdotjs/svg.js": "^3.0.16",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "chart.js": "^2.9.4",
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.4",
@@ -23,12 +26,15 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql-tag": "^2.11.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.6",
     "nuxt-i18n": "^6.18.0",
     "pg": "^8.5.1",
+    "randomcolor": "^0.6.2",
     "session-file-store": "^1.5.0",
     "vue-chartjs": "^3.5.1",
-    "vue-dynamic-star-rating": "^1.0.8"
+    "vue-dynamic-star-rating": "^1.0.8",
+    "vue-tour": "^1.5.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.4.2",
